--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -1,9 +1,4 @@
----
-import { SITE } from 'astrowind:config';
----
-
-<span
-  class="self-center ml-2 rtl:ml-0 rtl:mr-2 text-2xl md:text-xl font-bold text-gray-900 whitespace-nowrap dark:text-white"
->
-  🚀 {SITE?.name}
+<span>
+  <img src="/logo.svg" alt="Patent Assist" class="h-10 w-auto dark:hidden">
+  <img src="/logo-dark.svg" alt="Patent Assist" class="h-10 w-auto hidden dark:block">
 </span>
