--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -10,14 +10,6 @@
     >NEW</span
   >
   <a href="https://astro.build/blog/astro-4100/" class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >Astro 4.10 is now available! »</a
+    >Co-pilot feature is now coming to PatentAssist soon! »</a
   >
-  <a
-    target="_blank"
-    rel="noopener"
-    class="ltr:ml-auto rtl:mr-auto w-[5.6rem] h-[1.25rem] ml-auto bg-contain inline-block bg-[url(https://img.shields.io/github/stars/onwidget/astrowind.svg?style=social&label=Stars&maxAge=86400)]"
-    title="If you like AstroWind, give us a star."
-    href="https://github.com/onwidget/astrowind"
-  >
-  </a>
 </div>
